# evano-studio

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/agent-engine/: .env.example  .gitignore  README.md  evano-backend.spec  pyproject.toml  run_server.py
services/agent-engine/app/: __init__.py  agent_templates.py  main.py
services/agent-engine/app/api/: __init__.py  actions.py  activity.py  afm.py  agents.py  database.py  deps.py  discord.py  documents.py  health.py  images.py  knowledge.py  logs.py  ollama.py  openclaw.py  org.py  router.py  routines.py  settings.py  setup.py  system.py  teams.py  tools.py  version.py  workspace.py
services/agent-engine/app/core/: comfyui.py  config.py  discord.py  errors.py  logging.py  paths.py  workspace.py
services/agent-engine/app/db/: __init__.py  base.py  models.py  session.py
services/agent-engine/tests/: conftest.py  test_actions.py  test_activity.py  test_afm.py  test_agent_documents.py  test_agent_images.py  test_agent_loop.py  test_agent_templates.py  test_agents.py  test_chats.py  test_database.py  test_discord.py  test_document_export.py  test_documents.py  test_endpoints.py  test_hardware.py  test_images.py  test_knowledge.py  test_knowledge_sync.py  test_logs.py  test_ollama.py  test_openclaw.py  test_openclaw_discord.py  test_openclaw_rag.py  test_org.py  test_routines.py  test_settings.py  test_setup.py  test_support.py  test_teams.py  test_tool_intent.py  test_tools.py  test_whatsapp_login.py  test_workspace_setup.py
(+295 files in other folders)
