[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evano-agent-engine"
version = "0.1.0"
description = "Local backend service for Evano Studio (FastAPI). Local-only, privacy-first."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Evano Studio" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "httpx>=0.27.0",
    "chromadb>=1.0.0",
    "discord.py>=2.4.0",
    "python-docx>=1.1.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
agent-engine = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
